# kaif-client-service

./: README.md  alembic.ini  config.py  pyproject.toml
api/repository/: client_repository.py  repository_uow.py
api/web/: client_service.py
migrations/: env.py
src/client_service/: __main__.py  factories.py  loader.py
src/client_service/domain/: dtos.py
src/client_service/repository/: client_repository.py  repository_uow.py
src/client_service/web/: client_service.py  mappers.py
src/db/: mappers.py  schemas.py
src/migrations/versions/: fb8885cddb9d_init.py
tests/: conftest.py
tests/integration/: test_client_service.py
